hphp/hack/test/typecheck/is_expression/trait.php.exp
File "trait.php", line 6, characters 16-19:
Invalid "is" expression hint (Typing[4195])
  File "trait.php", line 6, characters 16-19:
  The "is" operator cannot be used with a trait
