hphp/hack/test/typecheck/is_expression/trait.php
<?hh // strict

trait TFoo {}

function f(mixed $x): bool {
  return $x is TFoo;
}
